--- a/nginx.conf
+++ b/nginx.conf
@@ -14,14 +14,9 @@ http {
     gzip_disable "msie6";
 
     gzip_vary on;
-    gzip_proxied any;
-    gzip_comp_level 6;
-    gzip_buffers 16 8k;
-    gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    
+
     listen 8080;
-    lua_code_cache on;
+    lua_code_cache off;
     set $session_secret 623q4hR325t36VsCD3g567922IC0073T;
     location / {
       default_type text/html;
