Fix POST processing

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,8 @@ events {
 
 http {
   include mime.types;
- 
+ client_body_buffer_size 10m;
+client_max_body_size 10m; 
   server {
     gzip on;
     gzip_disable "msie6";
