Clean up, convert myweb to moonscript, support php site
Convert myweb.lua to myweb.moon, so less dealing with manual lua file.
nginx.conf now no need manually route all .lua file. Default is app.lua
also can add php site together, for some who dont want to run openresty
and nginx in one machine.

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,55 +3,52 @@ error_log stderr notice;
 daemon on;
 
 events {
-  worker_connections 1024;
+    worker_connections 1024;
 }
 
 http {
-  include mime.types;
- client_body_buffer_size 10m;
-client_max_body_size 10m; 
-  server {
-    gzip on;
-    gzip_disable "msie6";
+    include mime.types;
+    client_body_buffer_size 10m;
+    client_max_body_size 10m;
+    include "phpsite.conf";
+    server {
+        gzip on;
+        gzip_disable "msie6";
 
-    gzip_vary on;
+        gzip_vary on;
 
-    listen 8080;
-    lua_code_cache off;
-    set $session_secret 623q4hR325t36VsCD3g567922IC0073T;
-    location / {
-      default_type text/html;
-      content_by_lua_file 'app.lua';
+        listen 8080;
+        lua_code_cache off;
+        set $session_secret 623q4hR325t36VsCD3g567922IC0073T;
+        set $session_cookie_persistent on;
+        set $session_cookie_lifetime 360000;
+        
+        set $home "/var/www/restyweb";
+        set $home "/home/ryanwidi/www/restyweb";
+        default_type text/html;        
+        location /{
+            set $target '';
+            access_by_lua '
+              lfs=require("lfs")
+              lfs.chdir(ngx.var.home)
+              uri=ngx.var.uri
+              if uri == "/" then
+                ngx.var.target="/app.lua"
+              elseif string.sub(uri,#uri)=="/" then
+                ngx.var.target=uri
+              elseif string.sub(uri,#uri-3)==".lua" then
+                ngx.var.target=uri
+              else
+                ngx.var.target=uri..".lua"
+              end  
+            ';
+            content_by_lua_file '$home$target';
+        }
+        location /static/ {
+            alias $home/static/;
+        }
+        location /favicon.ico {
+            alias static/favicon.ico;
+        }
     }
-    
-   
-    location /qproduk {
-      default_type text/html;
-      content_by_lua_file 'qproduk.lua';
-    }
-    location /data {
-      default_type text/html;
-      content_by_lua_file 'data.lua';
-    }
-    location /nota {
-      default_type text/html;
-      content_by_lua_file 'nota.lua';
-    }
-    location /test {
-      default_type text/html;
-      content_by_lua_file 'testform.lua';
-    }
-    location /test2 {
-      default_type text/html;
-      content_by_lua_file 'app2.lua';
-    }
-
-    location /static/ {
-      alias static/;
-    }
-
-    location /favicon.ico {
-      alias static/favicon.ico;
-    }
-  }
 }
